--- a/teas.json
+++ b/teas.json
@@ -11,7 +11,7 @@
   "description" : "Черный чай с характерным вкусом и ароматом.",
   "flavor_profile" : "шоколадный копченый",
   "quantity" : 72,
-  "type" : "черный"
+  "type" : "черныйs"
 }, {
   "id" : 3,
   "name" : "Цейлон",
