--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.teacollectionapplication/potato.Main</mainClass>
+              <mainClass>com.example.teacollectionapplication/org.example.application.Main</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
